--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@react-three/drei": "^9.105.6",
+    "@react-three/fiber": "^8.16.6",
     "framer-motion": "^11.0.24",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.10.2",
+    "three": "^0.164.1"
   },
   "devDependencies": {
     "@types/node": "^20",
