--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
     "framer-motion": "^11.0.24",
-    "next": "14.1.4",
+    "next": "^14.2.9",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
